# rag-gate

./: .gitignore  Cargo.toml  LICENSE  README.md  test_calibrate.py
benchmarks/: README.md  hotpotqa_confidence_eval.py  hotpotqa_results.json  hotpotqa_sample.json  recovery_reroute_anthropic_eval.py  recovery_reroute_eval.py  recovery_reroute_grok_eval.py  recovery_reroute_grok_results.json  recovery_retry_eval.py  recovery_retry_results.json  reroute_bigN_baseline.json  reroute_bigN_eval.py  reroute_bigN_results.json
src/: calibrate.rs  config.rs  evaluator.rs  interceptor.rs  lib.rs  main.rs  metrics.rs  proxy.rs
tests/: evaluator_test.rs  interceptor_test.rs
