[package]
name = "rag-gate"
version = "0.1.2"
edition = "2024"
description = "Logprob-based confidence middleware for selective generation in RAG pipelines"
keywords = ["llm", "rag", "confidence", "proxy", "selective-generation"]
categories = ["web-programming::http-server", "science"]
repository = "https://github.com/ajanm007/rag-gate"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
bytes = "1"
